--- a/views/say.erb
+++ b/views/say.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <%=
-    number = params[:number]
+    number = params[:number].to_i
     phrase = params[:phrase]
     number.times do
       "#{phrase}"
