automatically backed up by learn

--- a/views/say.erb
+++ b/views/say.erb
@@ -5,10 +5,11 @@
     <title></title>
   </head>
   <body>
-    <%=
-    number = params[:number].to_i
-    phrase = params[:phrase]
-    number.times do
+
+    <%number = params[:number].to_i%>
+    <%phrase = params[:phrase]%>
+
+    <%=number.times do
       " phrase"
     end
      %>
