--- a/views/say.erb
+++ b/views/say.erb
@@ -9,8 +9,8 @@
     <%number = params[:number].to_i%>
     <%phrase = params[:phrase]%>
 
-    <%=number.times do
-      " phrase"
+    <%number.times do
+      <%=" phrase"%>
     end%>
 
   </body>
