--- a/views/say.erb
+++ b/views/say.erb
@@ -9,9 +9,7 @@
     <%number = params[:number].to_i%>
     <%phrase = params[:phrase]%>
 
-    <%=number.times do
-      " phrase"
-    end%>
+    <%= "Hey"%>
 
   </body>
 </html>
