--- a/views/say.erb
+++ b/views/say.erb
@@ -9,7 +9,7 @@
     <%number = params[:number].to_i%>
     <%phrase = params[:phrase]%>
 
-    <%= phrase%>
+    <%= 5.times do phrase end%>
 
   </body>
 </html>
