--- a/views/say.erb
+++ b/views/say.erb
@@ -9,7 +9,10 @@
     <%number = params[:number].to_i%>
     <%phrase = params[:phrase]%>
 
-    <%= 5.times do phrase end%>
+    <ul>
+      <% number.times do  %>
+        <li><%= phrase %></li>
+    </ul>
 
   </body>
 </html>
